--- a/content/research/index.html
+++ b/content/research/index.html
@@ -258,26 +258,18 @@
 
 
   <h3 class="article-title" itemprop="headline">
-    <a href="/research/getting-started/" itemprop="url">Learning Strategies</a>
-  </h3>
-  <div class="article-style" itemprop="articleBody">
-
-    Academic is a framework to help you create a beautiful website quickly. Perfect for personal sites, blogs, or business/project sites. Check out the latest demo of what you&rsquo;ll get in less than 10 minutes. Then head on over to the Quick Start guide or take a look at the Release Notes.
-
-Key features:
- Easily manage various content including homepage, blog posts, publications, talks, and projects Extensible via color themes and widgets/plugins Write in Markdown for easy formatting and code highlighting, with LaTeX for mathematical expressions Social/academic network linking, Google Analytics, and Disqus comments Responsive and mobile friendly Simple and refreshing one page design Multilingual and easy to customize  Color Themes Academic is available in different color themes and font themes.
-
-  </div>
-
-  <h3 class="article-title" itemprop="headline">
     <a href="/research/getting-started/" itemprop="url">Retrieval-based Learning</a>
   </h3>
   <div class="article-style" itemprop="articleBody">
+Retrieval practice is the finding that bringing information to mind (i.e. retrieval) is a particulary powerful learning strategy. A major problem with the research on retrieval practice is that the majority of the studies use a very artificial procedure from Roediger and Karpicke (2006). Students read the material, freely recall what they can remember, reread the information, and recall again. This procedure is effective at producing large memory benefits, but seems weird to do with a textbook chapter. Free recall is burdensome, extremely time-consuming, unenjoyable, and is difficult to self-evaluate. The procedure also has students reread information, which is an ineffective learning activity. One of the potential reasons for why students are not using retrieval when they study is because they are not provided a concrete way to practice retrieval. My research seeks to find better and more authentic ways students can practice retrieval. From this perspective, I have combined retrieval practice with other learning activities, changed the feedback from rereading to self-evaluation, and implemented an online, peer-generated question bank into a psychology course. Despite these efforts, there is still no best way for stuents to integrate retrieval into their everyday learning.
+</div>
 
-    Academic is a framework to help you create a beautiful website quickly. Perfect for personal sites, blogs, or business/project sites. Check out the latest demo of what you&rsquo;ll get in less than 10 minutes. Then head on over to the Quick Start guide or take a look at the Release Notes.
-
-Key features:
- Easily manage various content including homepage, blog posts, publications, talks, and projects Extensible via color themes and widgets/plugins Write in Markdown for easy formatting and code highlighting, with LaTeX for mathematical expressions Social/academic network linking, Google Analytics, and Disqus comments Responsive and mobile friendly Simple and refreshing one page design Multilingual and easy to customize  Color Themes Academic is available in different color themes and font themes.
+<h3 class="article-title" itemprop="headline">
+  <a href="/research/getting-started/" itemprop="url">E-Learning</a>
+  </h3>
+<div class="article-style" itemprop="articleBody">
+Advances in technology are shifting the educational landscape; flipped, blended, and online classrooms are more prevalent than ever and each pose benefits with limitations. What can we do to improve these formats to better students? How can we incorporate retrieval, peer-tutoring, and other effective strategies into these courses? Simply making learning electronic does not necessarily improve learning. Thus, it is imperative to determine ways in which technology can be leverage to overcome students' limitations, leading to effective E-learning intervention. So far, I have explored the effects of computer-based concept maps, accelerated video presentation, multimedia graphic presentation, and online question banks on learning.
+</div>
 
  <br>
  <br>
