update about me

--- a/public/index.html
+++ b/public/index.html
@@ -309,8 +309,11 @@
   </div>
   <div class="col-xs-12 col-md-8" itemprop="description">
 
-    <p><br><br>
-Students spend countless hours attending lectures, visiting office hours, and studying independently. Yet, they are often unprepared and forgetful when test time comes. My research seeks to resolve this unfortunate predicament by applying principles from education, psychology, and cognitive science in order to promote long-term learning.</p>
+    
+
+<h1 id="a-little-about-me">A little about me</h1>
+
+<p>Students spend countless hours attending lectures, visiting office hours, and studying independently. Yet, they are often unprepared and forgetful when test time comes. My research seeks to resolve this unfortunate predicament by applying principles from education, psychology, and cognitive science in order to promote long-term learning.</p>
 
 
     <div class="row">
