--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -154,7 +154,7 @@
 
 
 
-                
+
 
 
 
@@ -260,13 +260,6 @@
       <p><b>O’Day, G. M.</b>, & Karpicke, J.D. (in preparation). Does self-scoring enhance learning?
       </p>
 
-      <p><b>O’Day, G. M.</b>, Nunes, L. D., & Karpicke, J.D. (in preparation). Students don’t self-test with
-      peer-generated questions.
-      </p>
-
-      <p>Coverdale, M. E., <b>O’Day, G. M.</b>, Nairne, J. S., & Karpicke, J. D. (in preparation). Using survival
-      processing to enhance retrieval practice.
-    </p>
     </div>
 
 
@@ -274,6 +267,22 @@
 
   <h3 class="article-title" itemprop="headline">Conference Presentations</h3>
     <div class="article-style" itemprop="articleBody">
+
+      <p><b>O’Day, G. M.</b>, & Karpicke, J. D. (May 2019). The Favoritism for Teacher-Generated Questions and the Failure of a Peer-Generated Question Bank.
+         Poster presented at the American Psychological Society Annual Meeting, Washington D.C. <a href="url">[Poster]</a>
+
+      </p>
+
+      <p><b>O’Day, G. M.</b>, & Karpicke, J. D. (November 2018). Combining and Comparing Retrieval Practice and Concept Mapping.
+        Poster presented at the Psychonomic Society Annual Meeting, Boston, MA. <a href="url">[Poster]</a>
+
+      </p>
+
+      <p><b>O’Day, G.M.</b>,, & Karpicke, J. D. (October 2018). Getting students to practice retrieval using a
+      peer-generated, online question bank: An underpowered exploration. Talk given at Purdue Cognitive Psychology Colloquium. West Lafayette, IN. <a href="url">[Slides]</a>
+
+      </p>
+
       <p><b>O’Day, G. M.</b>, & Karpicke, J. D. (November 2017). Does Self-Scoring Enhance Learning?
       Poster presented at the Psychonomic Society Annual Meeting, Vancouver, Canada. <a href="url">[Poster]</a>
 
