--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
   
   
   
-  <meta name="theme-color" content="#2962ff">
+  <meta name="theme-color" content="#26619c">
   
 
   
@@ -92,7 +92,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.9e398b7a64ee2c82769da9724cdbf0cc.css">
+  <link rel="stylesheet" href="/css/academic.min.eab6464af5b0a77ae0393b7ac4eba116.css">
 
   
 
