--- a/public/research/index.html
+++ b/public/research/index.html
@@ -91,7 +91,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/academic.min.837f8dd1e3cadcce3c7007ffd58c1734.css">
+  <link rel="stylesheet" href="/css/academic.min.3029d9cd57b61b7ae8a3aace3357f83f.css">
 
   
 
@@ -384,13 +384,13 @@
 
 <h1 id="center-research-interests-center"><center>Research Interests</center></h1>
 
-<h3 id="span-style-color-6897bb-how-can-retrieval-based-learning-be-optimized-span"><span style="color:#6897bb">How can retrieval-based learning be optimized?</span></h3>
+<h3 id="span-style-color-1b85b8-how-can-retrieval-based-learning-be-optimized-span"><span style="color:#1b85b8">How can retrieval-based learning be optimized?</span></h3>
 
 <p>Learning is often conceptualized as encoding or the acquisition of knowledge and can occur when students are reading textbooks, taking notes, or studying examples. Sometime after students have finished learning the material, they are given a test to assess their understanding. Testing, in this view, is seen as nothing more than a diagnostic tool that students do not enjoy taking and teachers do not enjoy grading. Fortunately, research has consistently demonstrated the immense learning that arises from taking tests and retrieving information, which vastly outweighs the drawbacks of testing.</p>
 
 <p>My research focuses on in leveraging retrieval in new ways to further promote durable learning. From this perspective, I attempted to improve passive reading of feedback by incorporating self-evaluation, examined the mnemonic consequences of combining other learning strategies with retrieval practice, and investigated the robustness of the retrieval practice effect when learners are experiencing test anxiety.</p>
 
-<h3 id="span-style-color-6897bb-how-can-students-belief-in-and-use-of-effective-learning-strategies-be-increased-span"><span style="color:#6897bb"> How can students&rsquo; belief in and use of effective learning strategies be increased? </span"></h3>
+<h3 id="span-style-color-1b85b8-how-can-students-belief-in-and-use-of-effective-learning-strategies-be-increased-span"><span style="color:#1b85b8"> How can students&rsquo; belief in and use of effective learning strategies be increased? </span"></h3>
 
 <p>Despite the advances in the understanding of how people can learn optimally, many learners are often unaware of the benefits researched-based study strategies afford. Consequently, they underutilize these strategies when studying. How do we get students to see the light? Simply telling them what is effective is not enough! Your doctor telling you to be healthier is not helpful at all. Similarly, learning scientists telling students to use evidence-based learning strategies, such as retrieval practice, is not helpful. Why should students practice retrieval? How should they go about practicing retrieval?</p>
 
