now im done with colors

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -384,13 +384,13 @@
 
 <h1 id="center-projects-center-h1"><center>Projects</center></h1></h1>
 
-<h3 id="span-style-color-6897bb-manuscripts-in-preparation-span"><span style="color:#6897bb"> Manuscripts in Preparation </span></h3>
+<h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
 <p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Combining and Compairing Concept Mapping and Retrieval Practice.</p>
 
 <p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Does self-scoring enhance learning?</p>
 
-<h3 id="span-style-color-6897bb-conference-presentations-span"><span style="color:#6897bb"> Conference Presentations </span"></h3>
+<h3 id="span-style-color-1b85b8-conference-presentations-span"><span style="color:#1b85b8"> Conference Presentations </span"></h3>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The Favoritism for Teacher-Generated Questions and the Failure of a Peer-Generated Question Bank. Poster presented at the American Psychological Society Annual Meeting, Washington D.C. <a href="http://google.com" target="_blank">[Poster]</a></p>
 
