update bios / add links / add bam image

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -386,19 +386,21 @@
 
 <h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Combining and Compairing Concept Mapping and Retrieval Practice.</p>
+<p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning.</p>
+
+<p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Combining and compairing concept mapping and retrieval practice.</p>
 
 <p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Does self-scoring enhance learning?</p>
 
-<h3 id="span-style-color-1b85b8-conference-presentations-span"><span style="color:#1b85b8"> Conference Presentations </span"></h3>
+<h3 id="span-style-color-1b85b8-professional-presentations-span"><span style="color:#1b85b8"> Professional Presentations </span"></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The Favoritism for Teacher-Generated Questions and the Failure of a Peer-Generated Question Bank. Poster presented at the American Psychological Society Annual Meeting, Washington D.C. <a href="http://google.com" target="_blank">[Poster]</a></p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The failure of a peer-generated question bank and the favoritism for teacher-generated questions and . Poster presented at the American Psychological Society Annual Meeting, Washington D.C. [Link coming soon!]</p>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (November 2018). Combining and Comparing Retrieval Practice and Concept Mapping. Poster presented at the Psychonomic Society Annual Meeting, Boston, MA. [Poster]</p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (November 2018). Combining and comparing retrieval practice and concept mapping. Poster presented at the Psychonomic Society Annual Meeting, Boston, MA. <a href="https://drive.google.com/file/d/17XOxRYsQvwxIIv499_SbHYQ74Foe3b2u/view?usp=sharing" target="_blank">[Poster]</a></p>
 
-<p>O’Day, G.M.,, &amp; Karpicke, J. D. (October 2018). Getting students to practice retrieval using a peer-generated, online question bank: An underpowered exploration. Talk given at Purdue Cognitive Psychology Colloquium. West Lafayette, IN. [Slides]</p>
+<p>O’Day, G.M.,, &amp; Karpicke, J. D. (October 2018). Getting students to practice retrieval using a peer-generated, online question bank: An underpowered exploration. Talk given at Purdue Cognitive Psychology Colloquium. West Lafayette, IN. <a href="https://drive.google.com/file/d/1oC8Rdk5VPkAfb_QzyMCRVi40czHGwCvV/view?usp=sharing" target="_blank">[Slides]</a></p>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (November 2017). Does Self-Scoring Enhance Learning? Poster presented at the Psychonomic Society Annual Meeting, Vancouver, Canada. [Poster]</p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (November 2017). Does self-scoring enhance learning? Poster presented at the Psychonomic Society Annual Meeting, Vancouver, Canada. <a href="https://drive.google.com/file/d/1lUhnsZ7zZt71X3v73H0s5gr3gIsl3yZq/view?usp=sharing" target="_blank">[Poster]</a></p>
 
 <p>Ritchey, M., Gruber, M.J., Dhillon, A.S., O’Day, G. M., &amp; Ranganath, C. (November 2016). Effects of emotional anticipation on neural oscillations involved in context-guided prediction. Poster presented at the Society for Neuroscience Annual Meeting, San Diego, CA.</p>
 </div>
