--- a/public/research/index.html
+++ b/public/research/index.html
@@ -386,20 +386,22 @@
 
 <h3 id="span-style-color-1b85b8-how-can-retrieval-based-learning-be-optimized-span"><span style="color:#1b85b8">How can retrieval-based learning be optimized?</span></h3>
 
-<p>Learning is often conceptualized as encoding or the acquisition of knowledge and can occur when students are reading textbooks, taking notes, or studying examples. Sometime after students have finished learning the material, they are given a test to assess their understanding. Testing, in this view, is seen as nothing more than a diagnostic tool that students do not enjoy taking and teachers do not enjoy grading. Fortunately, research has consistently demonstrated the immense learning that arises from taking tests and retrieving information, which vastly outweighs the drawbacks of testing.</p>
+<p>Learning is often conceptualized as the encoding or acquisition of knowledge. Sometime after students have finished learning the material, they are given a test to assess their understanding. Testing, in this view, is seen as nothing more than a diagnostic tool that students do not enjoy completing  and teachers do not enjoy administering. Fortunately, research has consistently demonstrated that enhanced learning arises from taking tests and retrieving information, which vastly outweighs the drawbacks of testing.</p>
 
-<p>My research focuses on in leveraging retrieval in new ways to further promote durable learning. From this perspective, I attempted to improve passive reading of feedback by incorporating self-evaluation, examined the mnemonic consequences of combining other learning strategies with retrieval practice, and investigated the robustness of the retrieval practice effect when learners are experiencing test anxiety.</p>
+<p>My research focuses on leveraging retrieval in new ways to further promote durable learning. From this perspective, I attempted to improve passive reading of feedback by incorporating self-evaluation, examined the mnemonic consequences of combining other learning strategies with retrieval practice, and investigated the robustness of the retrieval practice effect when learners are experiencing test anxiety.</p>
 
 <h3 id="span-style-color-1b85b8-how-can-students-belief-in-and-use-of-effective-learning-strategies-be-increased-span"><span style="color:#1b85b8  "> How can students&rsquo; belief in and use of effective learning strategies be increased? </span"></h3>
 
-<p>Despite the advances in the understanding of how people can learn optimally, many learners are often unaware of the benefits researched-based study strategies afford. Consequently, they underutilize these strategies when studying. How do we get students to see the light? Simply telling them what is effective is not enough! Your doctor telling you to be healthier is not helpful at all. Similarly, learning scientists telling students to use evidence-based learning strategies, such as retrieval practice, is not helpful. Why should students practice retrieval? How should they go about practicing retrieval?</p>
+<p>Despite the advances in understanding of how people can learn optimally, many learners are often unaware of the benefits researched-based study strategies afford. Consequently, they underutilize these strategies when studying. A doctor advising her patients to be healthier is ineffective unless she also provides strategies for doing so. Similarly, telling students to study efficiently is not enough. Why should students practice retrieval? How should they go about doing so most efficiently?</p>
 
-<p>From this perspective, I have developed a framework - BAM - to better understand why students do not practice retrieval.</p>
+<p>From this perspective, I have developed a framework - BAM - to better understand the roadblocks that inhibit students from practicing retrieval.</p>
+
+<p><img src="BAM.jpg" alt="alt text" title="Logo Title Text 1" /></p>
 
 <ol>
 <li><p>Belief - Learners need to believe in the efficacy of the learning strategy. If they do not think a learning activity is useful then they will not use it.</p></li>
 
-<li><p>Access - Learners need to have access to materials that afford engagement in the learning activity. If learners are left without retrieval practice materials then they will be far less likely to engage in retrieval practice as their limited time is first depleted by creating practice questions, notecards, or any other cue that can prompt retrieval. Learners may also mistakenly believe that the creation of these materials leads to long-term learning and may terminate their studying before the materials are used to practice retrieval.</p></li>
+<li><p>Access - Learners need to have access to materials that afford engagement in the learning activity. If learners are left without retrieval practice materials then they will be far less likely to engage in retrieval practice as their limited time is first depleted by creating practice questions, notecards, or any other cue that can prompt retrieval. Learners may also mistakenly believe that the creation of these materials leads to long-term learning and may terminate their studying before the materials are adequately used to practice retrieval.</p></li>
 
 <li><p>Motivation - Learners need to be motivated to learn. If students are not motivated to master the material then they will not use a time-consuming and desirable-difficulty inducing learning strategy.</p></li>
 </ol>
