wording changes to about

--- a/public/index.html
+++ b/public/index.html
@@ -474,7 +474,7 @@
 
 <h1 id="span-style-color-1b85b8-a-little-about-me-span"><span style="color:#1b85b8"> A little about me </span></h1>
 
-<p>Students spend countless hours attending lectures, visiting office hours, and studying independently. Yet, when they are tested they are often unprepared, forgetful, and overconfident. My research seeks to reconcile this troublesome situation by applying principles from education, psychology, and cognitive science in order to promote long-term learning. Specifically, I am interested in optimizing retrieval-based learning and increasing students’ belief in and use of effective learning strategies.</p>
+<p>Students spend countless hours attending lectures, visiting office hours, and studying independently. Yet, they are often unprepared, forgetful, and overconfident when tested. My research seeks to reconcile this troublesome situation by applying principles from education, psychology, and cognitive science in order to promote long-term learning. Specifically, I am interested in optimizing retrieval-based learning and increasing students’ belief in and use of effective learning strategies.</p>
 
 
     <div class="row">
