fix typo by adding university's

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -398,7 +398,7 @@
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (November 2018). Combining and comparing retrieval practice and concept mapping. Poster presented at the Psychonomic Society Annual Meeting, Boston, MA. <a href="https://drive.google.com/file/d/17XOxRYsQvwxIIv499_SbHYQ74Foe3b2u/view?usp=sharing" target="_blank">[Poster]</a></p>
 
-<p>O’Day, G.M.,, &amp; Karpicke, J. D. (October 2018). Getting students to practice retrieval using a peer-generated, online question bank: An underpowered exploration. Talk given at Purdue Cognitive Psychology Colloquium. West Lafayette, IN. <a href="https://drive.google.com/file/d/1oC8Rdk5VPkAfb_QzyMCRVi40czHGwCvV/view?usp=sharing" target="_blank">[Slides]</a></p>
+<p>O’Day, G.M.,, &amp; Karpicke, J. D. (October 2018). Getting students to practice retrieval using a peer-generated, online question bank: An underpowered exploration. Talk given at Purdue University&rsquo;s Cognitive Psychology Colloquium. West Lafayette, IN. <a href="https://drive.google.com/file/d/1oC8Rdk5VPkAfb_QzyMCRVi40czHGwCvV/view?usp=sharing" target="_blank">[Slides]</a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (November 2017). Does self-scoring enhance learning? Poster presented at the Psychonomic Society Annual Meeting, Vancouver, Canada. <a href="https://drive.google.com/file/d/1lUhnsZ7zZt71X3v73H0s5gr3gIsl3yZq/view?usp=sharing" target="_blank">[Poster]</a></p>
 
