--- a/public/research/index.html
+++ b/public/research/index.html
@@ -396,7 +396,7 @@
 
 <p>From this perspective, I have developed a framework - BAM - to better understand the roadblocks that inhibit students from practicing retrieval.</p>
 
-<p><img src="BAM.jpg" alt="alt text" /></p>
+<p><img src="BAM.pdf" alt="alt text" /></p>
 
 <ol>
 <li><p>Belief - Learners need to believe in the efficacy of the learning strategy. If they do not think a learning activity is useful then they will not use it.</p></li>
