--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -394,7 +394,7 @@
 
 <h3 id="span-style-color-1b85b8-professional-presentations-span"><span style="color:#1b85b8"> Professional Presentations </span"></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The failure of a peer-generated question bank and the favoritism for teacher-generated questions. Poster presented at the American Psychological Society Annual Meeting, Washington D.C. [Link coming soon!]</p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The failure of a peer-generated question bank and the favoritism for teacher-generated questions. Poster presented at the American Psychological Society Annual Meeting, Washington D.C. <a href="https://drive.google.com/file/d/1pHGqS7M2Osd87OHZudtRWqAT3JvNcKyh/view?usp=sharing" target="_blank">[Poster]</a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (November 2018). Combining and comparing retrieval practice and concept mapping. Poster presented at the Psychonomic Society Annual Meeting, Boston, MA. <a href="https://drive.google.com/file/d/17XOxRYsQvwxIIv499_SbHYQ74Foe3b2u/view?usp=sharing" target="_blank">[Poster]</a></p>
 
