--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -386,7 +386,7 @@
 
 <h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning.</p>
+<p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "analyses.zip" download = "analyses.zip"> [data] </a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J.D. (in preparation). Combining and compairing concept mapping and retrieval practice.</p>
 
