actually add cmrp data

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -386,9 +386,9 @@
 
 <h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "analyses.zip" download = "analyses.zip"> [data] </a></p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "WE_analyses.zip" download = "WE_analyses.zip"> [data] </a></p>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Combining and compairing concept mapping and retrieval practice.</p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Combining and compairing concept mapping and retrieval practice. <a href = "CMRP_analyses.zip" download = "CMRP_analyses.zip"> [data] </a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Does self-scoring enhance learning?</p>
 
