--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -386,13 +386,19 @@
 
 <h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "WE_analyses.zip" download = "WE_analyses.zip"> [data] </a></p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "WE_analyses.zip" download = "WE_analyses.zip"> [data] </a> <a href = "garrettoday.info/projects/papers/MastersThesis_ODay_Garrett_2019_06_25"> [pdf] </a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Combining and compairing concept mapping and retrieval practice. <a href = "CMRP_analyses.zip" download = "CMRP_analyses.zip"> [data] </a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Does self-scoring enhance learning?</p>
 
 <h3 id="span-style-color-1b85b8-professional-presentations-span"><span style="color:#1b85b8"> Professional Presentations </span"></h3>
+
+<p>O’Day, G. M., &amp; Karpicke, J. D. (November 2019). Improving Problem Solving with Retrieval-Based Learning. Poster presented at the Psychonomic Society Annual Meeting, Montreal, QC. <a href="https://drive.google.com/open?id=1aISXVSXQYYGBD5JVneJfz5I-0VJ1INUA" target="_blank">[Poster]</a></p>
+
+<p>Hornburg Byrd, Caroline, O’Day, G. M., &amp; Karpicke, J. D. (November 2019). Examining the Effectiveness of Retrieval Practice Under Performance Pressure During a Final Test. Poster presented at the Psychonomic Society Annual Meeting, Montreal, QC. <a href="https://drive.google.com/open?id=1bQbHyiWDinrP1cw91Lio9Ya-erJ-3Iek" target="_blank">[Poster]</a></p>
+
+<p>O’Day, G.M., &amp; Karpicke, J. D. (October 2019). Improving students&rsquo; belief in and use of retrieval practice. Talk given at Purdue University&rsquo;s Cognitive Psychology Colloquium. West Lafayette, IN. <a href="https://drive.google.com/open?id=10hsYWrogQc_z19tWiBW6WRkb9tFSkeHE" target="_blank">[Slides]</a></p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (May 2019). The failure of a peer-generated question bank and the favoritism for teacher-generated questions. Poster presented at the American Psychological Society Annual Meeting, Washington D.C. <a href="https://drive.google.com/file/d/1pHGqS7M2Osd87OHZudtRWqAT3JvNcKyh/view?usp=sharing" target="_blank">[Poster]</a></p>
 
