update project section

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -384,11 +384,19 @@
 
 <h1 id="center-projects-center-h1"><center>Projects</center></h1></h1>
 
+<h3 id="span-style-color-1b85b8-master-s-thesis-span"><span style="color:#1b85b8"> Master&rsquo;s Thesis </span></h3>
+
+<p>O’Day, G. M., &amp; Karpicke, J. D. (2019). Improving problem solving with retrieval-based learning. <a href = "WE_analyses.zip" download = "WE_analyses.zip"> [data] </a> <a href = "garrettoday.info/projects/papers/MastersThesis_ODay_Garrett_2019_06_25.pdf"> [pdf] </a></p>
+
 <h3 id="span-style-color-1b85b8-manuscripts-in-preparation-span"><span style="color:#1b85b8"> Manuscripts in Preparation </span></h3>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation &ndash; Master&rsquo;s Thesis). Improving problem solving with retrieval-based learning. <a href = "WE_analyses.zip" download = "WE_analyses.zip"> [data] </a> <a href = "garrettoday.info/projects/papers/MastersThesis_ODay_Garrett_2019_06_25.pdf"> [pdf] </a></p>
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in revision). Combining and comparing concept mapping and retrieval practice. <a href = "CMRP_analyses.zip" download = "CMRP_analyses.zip"> [data] </a></p>
 
-<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Combining and compairing concept mapping and retrieval practice. <a href = "CMRP_analyses.zip" download = "CMRP_analyses.zip"> [data] </a></p>
+<p>O’Day, G. M., Coverdale, M.E., &amp; Karpicke, J. D. (in preparation). Improving retrieval practice by enhancing encoding.</p>
+
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Getting students to use retrieval practice by increasing their belief in its effectiveness.</p>
+
+<p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). The failure of a peer-generated question bank and the favoritism for teacher-generated questions.</p>
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (in preparation). Does self-scoring enhance learning?</p>
 
