fix caroline name

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -404,7 +404,7 @@
 
 <p>O’Day, G. M., &amp; Karpicke, J. D. (November 2019). Improving Problem Solving with Retrieval-Based Learning. Poster presented at the Psychonomic Society Annual Meeting, Montreal, QC. <a href="https://drive.google.com/open?id=1aISXVSXQYYGBD5JVneJfz5I-0VJ1INUA" target="_blank">[Poster]</a></p>
 
-<p>Hornburg Byrd, Caroline, O’Day, G. M., &amp; Karpicke, J. D. (November 2019). Examining the Effectiveness of Retrieval Practice Under Performance Pressure During a Final Test. Poster presented at the Psychonomic Society Annual Meeting, Montreal, QC. <a href="https://drive.google.com/open?id=1bQbHyiWDinrP1cw91Lio9Ya-erJ-3Iek" target="_blank">[Poster]</a></p>
+<p>Hornburg, C.B., O’Day, G. M., &amp; Karpicke, J. D. (November 2019). Examining the Effectiveness of Retrieval Practice Under Performance Pressure During a Final Test. Poster presented at the Psychonomic Society Annual Meeting, Montreal, QC. <a href="https://drive.google.com/open?id=1bQbHyiWDinrP1cw91Lio9Ya-erJ-3Iek" target="_blank">[Poster]</a></p>
 
 <p>O’Day, G.M., &amp; Karpicke, J. D. (October 2019). Improving students&rsquo; belief in and use of retrieval practice. Talk given at Purdue University&rsquo;s Cognitive Psychology Colloquium. West Lafayette, IN. <a href="https://drive.google.com/open?id=10hsYWrogQc_z19tWiBW6WRkb9tFSkeHE" target="_blank">[Slides]</a></p>
 
